# Celsius

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RaycastEngine  RaycastRenderer  SDLRaycaster  cmake_install.cmake  compile_commands.json  debug.out  main.c.BAK
.cache/clangd/index/: SDL.h.81220D2552BC71FA.idx  SDL_assert.h.F623D3826FBC997C.idx  SDL_atomic.h.DADAA5974F2834C9.idx  SDL_audio.h.1E26F0C2865FD5EF.idx  SDL_blendmode.h.CC42F9A71A0B2EDC.idx  SDL_clipboard.h.B3D79D5A4F667BC7.idx  SDL_config.h.C359A5362CDFBF52.idx  SDL_cpuinfo.h.33FE14B4282F2327.idx  SDL_endian.h.68190B0A23B21EC0.idx  SDL_error.h.ED7E07169645CA75.idx  SDL_events.h.666D70915BE689A9.idx  SDL_filesystem.h.FC9FF3F1B9769BA8.idx  SDL_gamecontroller.h.BEC850FD1A1DE591.idx  SDL_gesture.h.CBA3A23E6A7DAE98.idx  SDL_guid.h.F6C1FF634F471F1A.idx  SDL_haptic.h.BF02B782BB8245E2.idx  SDL_hidapi.h.85DDDB8AAFC2E3FA.idx  SDL_hints.h.BB7C6467E61E7E09.idx  SDL_joystick.h.258347ED7D6C464A.idx  SDL_keyboard.h.7F8A47D2D37D568D.idx  SDL_keycode.h.A21A7D33A1B2EADD.idx  SDL_loadso.h.2114B1217D46F170.idx  SDL_locale.h.4A92A111AF907654.idx  SDL_log.h.DB9198528BA1C106.idx  SDL_main.h.9C970B82E7BA0A9A.idx  SDL_messagebox.h.311E469BB1FD02A8.idx  SDL_metal.h.63D6B8BFFA77106E.idx  SDL_misc.h.4C4C4FED910DCDD7.idx  SDL_mouse.h.49146B7971835147.idx  SDL_mutex.h.C98EA940936D5D62.idx  SDL_pixels.h.E84B5DE3DFC98796.idx  SDL_platform.h.6492C3F465188F10.idx  SDL_power.h.B300C459AE413344.idx  SDL_quit.h.9DE5BAB1F83D1AE8.idx  SDL_rect.h.4C1F70EF72DBCFE2.idx  SDL_render.h.3941868244A31388.idx  (+75 more)
Dependencies/lib/: libcglm.0.9.2.dylib  libcglm.0.dylib  libcglm.dylib
RaycastRenderer.dSYM/Contents/: Info.plist
src/: camera.h  celsius.h  main.c
src/celsius/: camera.c  celsius.c  math.c  renderer.c  window.c
src/renderer/: camera.c  renderer.c  renderer.h
(+7 files in other folders)
